# car-dashboard

./: .gitignore  Cargo.toml  Cross.toml  readme.md
.github/workflows/: github-pages.yml
_site/: index.html  style.css
cross/docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.torizon-demos
dashboard/: Cargo.toml  build.rs
dashboard/src/: main.rs  map.rs  player.rs  ui.rs  web.rs
dashboard/ui/: demo.slint  demo_control.slint  images.slint  main.slint  test.slint  test2.slint  theme.slint  widgets.slint
dashboard/ui/blocks/: menu_bar.slint
dashboard/ui/views/: camera.slint  car.slint  header.slint  home.slint  main.slint  map.slint  media.slint  menu_bar.slint  player.slint  radio.slint  settings.slint  types.slint  weather.slint
dashboard/ui/widgets/: emergency_button.slint  icon_button.slint  menu_button.slint  menu_climate_control.slint  player.slint  speedometer.slint  test2.slint  toggle_switch.slint  transmission.slint  widgets.slint
geo-map/: Cargo.toml
geo-map/location/: Cargo.toml
geo-map/plugins/: Cargo.toml
location/: Cargo.toml
location/src/: main.rs
location/ui/: appwindow.slint
map-ui/: Cargo.toml
map-ui/src/: lib.rs
map-ui/src/map/: map.rs  map_control.rs  mod.rs  navigator.rs  viewport.rs
map-ui/src/map/layers/: layer.rs  mod.rs
map-ui/src/map/rendering/: renderer.rs
map-ui/src/slint/: map_control.rs  mod.rs
map-ui/src/slint/renderer/: map_renderer.rs  mod.rs
map-ui/src/tiling/: mod.rs  osm.rs
map-ui/src/tiling/layers/: mod.rs
