[package]
name = "car-dashboard"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "car-dashboard"

[dependencies]
futures = { version = "0.3.28", optional = true }
slint = { version = "1.8.0", features = ["backend-linuxkms-noseat"] }
i-slint-core = "1.8.0"
i-slint-core-macros = "1.7.2"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "time"] }

[build-dependencies]
slint-build = "1.8.0"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["console", "Screen", "Window"] }
console_error_panic_hook = "0.1.7"
