[package]
name = "car-dashboard"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "car-dashboard"

[dependencies]
futures = { version = "0.3.28", optional = true }
slint = { git = "https://github.com/slint-ui/slint", version = "1.9.0" }
i-slint-core = { git = "https://github.com/slint-ui/slint", version = "1.9.0" }
i-slint-core-macros = { git = "https://github.com/slint-ui/slint", version = "1.9.0" }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "time"] }
reqwest = "0.12.9"
image = "0.24.9"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", version = "1.9.0" }

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen = { version = "0.2" }
#web-sys = { version = "0.3", features = ["console", "Screen", "Window"] }
#console_error_panic_hook = "0.1.7"
