[package]
name = "location"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.5.1"
plotters = { version = "0.3.5", default-features = false, features = ["bitmap_backend"] }
image = { version = "0.25.0", default-features = false, features = ["png", "jpeg"] }

euclid = "0.22.9"

map-ui = { version = "0.1.0", path = "../map-ui", features = ["slint"] }

[build-dependencies]
slint-build = "1.5.1"